maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:17: error: reassignment to val
  	sommeAngle = sommeAngle-1}
                   ^Escaper:20: error: reassignment to val
  sommeAngle = sommeAngle+1
             ^Escaper:25: error: reassignment to val
    sommeAngle = sommeAngle-1
               ^Escaper:30: error: reassignment to val
      sommeAngle = sommeAngle-1
                 ^Escaper:35: error: reassignment to val
        sommeAngle = sommeAngle-1
                   ^